# cileasing-automated-tests_playwright

./: .env.example  .gitignore  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot-automerge.yml  dependabot.yml
.github/workflows/: main.yml  security-audit.yml
allure-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
config/: settings.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 103966708cc17cff.txt  10526a41f06c9794.txt  10a20a367579451b.txt  10a5216675eaa7aa.txt  11f5665e0464c70c.txt  122c1a62bd10e713.txt  1405bae22a9a38cd.txt  14b96d26fed012da.txt  14c904485b342a57.txt  14e16cac55c4cb33.txt  15b1a345a8e16fec.txt  15be2f66dde530b0.txt  161b210dbfac1af7.txt  161f724b3a01753.txt  (+378 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: __init__.py  add_bank_details_page.py  base_page.py  bvn_page.py  edit_bank_details_page.py  edit_emergency_contact_page.py  edit_self_service_page.py  home_page.py  login_page.py  self_service_page.py
tests_pages/: test_bvn.py  test_cases.py  test_identity.py  test_navigate_to_home_page.py  test_self_service_add_bank_details.py  test_self_service_bank_details.py  test_self_service_emergency_contact.py  test_self_service_personal_data.py  test_user_logins.py
utils/: constants.py  decorators.py
widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+417 files in other folders)
